Breaking: Converted color codes to MM